--- a/project/res/values/colors.xml
+++ b/project/res/values/colors.xml
@@ -161,4 +161,8 @@
     <color name="tablet_results_ab_default">@android:color/transparent</color>
     <color name="tablet_results_ab_flights">#142B42</color>
     <color name="tablet_bg_tiles_blend">#232c45</color>
+
+    <!-- Tablet flights -->
+    <color name="tablet_flight_trip_view_airport_text_color">#aaffffff</color>
+
 </resources>
