--- a/project/res/layout/section_flight_info_bar.xml
+++ b/project/res/layout/section_flight_info_bar.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.expedia.bookings.section.InfoBarSection xmlns:android="http://schemas.android.com/apk/res/android"
+<com.expedia.bookings.section.FlightInfoBarSection xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/bg_info_bar"
@@ -34,4 +34,4 @@
         android:textColor="@color/roboto_light"
         android:textSize="14dp" />
 
-</com.expedia.bookings.section.InfoBarSection>
+</com.expedia.bookings.section.FlightInfoBarSection>
