--- a/project/res/layout/snippet_tablet_flight_layover.xml
+++ b/project/res/layout/snippet_tablet_flight_layover.xml
@@ -9,9 +9,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:gravity="center_vertical"
-            android:drawablePadding="8dp"
+            android:layout_marginBottom="24dp"
+            android:layout_marginTop="24dp"
             android:drawableLeft="@drawable/ic_tablet_layover"
+            android:drawablePadding="8dp"
+            android:gravity="center_vertical"
             app:textStyle="light" />
 
 </FrameLayout>
