--- a/project/res/layout/fragment_tablet_search.xml
+++ b/project/res/layout/fragment_tablet_search.xml
@@ -48,7 +48,7 @@
             <LinearLayout
                 android:id="@+id/search_header_top_container"
                 android:layout_width="wrap_content"
-                android:layout_height="44dp"
+                android:layout_height="@dimen/tablet_search_header_height"
                 android:layout_toLeftOf="@+id/search_button"
                 android:layout_toRightOf="@+id/cancel_button"
                 android:background="@drawable/bg_tablet_search_header"
