--- a/project/res/values/dimens.xml
+++ b/project/res/values/dimens.xml
@@ -248,4 +248,6 @@
     <dimen name="destination_search_tile_text_margin_top">174dp</dimen>
 
     <dimen name="hotels_map_pin_padding">50dp</dimen>
+
+    <dimen name="tablet_search_header_height">44dp</dimen>
 </resources>
