Tell the flight map fragment its usable viewport

--- a/project/res/values/dimens.xml
+++ b/project/res/values/dimens.xml
@@ -250,4 +250,5 @@
     <dimen name="hotels_map_pin_padding">50dp</dimen>
 
     <dimen name="tablet_search_header_height">44dp</dimen>
+    <dimen name="tablet_results_flight_map_padding">16dp</dimen>
 </resources>
