Fixed amenity alignment

--- a/project/res/layout/snippet_amenity.xml
+++ b/project/res/layout/snippet_amenity.xml
@@ -2,8 +2,8 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="@dimen/amenity_layout_width"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="3dp"
-    android:layout_marginRight="3dp"
+    android:layout_marginLeft="@dimen/single_amenity_margin"
+    android:layout_marginRight="@dimen/single_amenity_margin"
     android:drawableTop="@drawable/ic_amenity_pool"
     android:gravity="center_horizontal|top"
     android:orientation="vertical"
