--- a/project/res/layout/fragment_tablet_hotel_details.xml
+++ b/project/res/layout/fragment_tablet_hotel_details.xml
@@ -40,7 +40,7 @@
                     android:layout_height="80dp"
                     android:layout_gravity="bottom"
                     android:background="#80808080"
-                    android:padding="16dp" >
+                    android:padding="@dimen/tablet_detail_padding" >
 
                     <Button
                         android:id="@+id/button_add_to_trip"
@@ -131,13 +131,13 @@
                 android:id="@+id/reviews_container"
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
+                android:paddingLeft="@dimen/tablet_detail_padding"
                 android:background="@color/tablet_white_pane_bg" >
 
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="48dp"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="16dp"
                     android:layout_weight="1"
                     android:gravity="center_vertical|left" >
 
@@ -194,7 +194,6 @@
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_marginRight="8dp"
                     android:layout_weight="1"
                     android:gravity="center_vertical|right"
                     android:padding="8dp"
@@ -210,8 +209,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
                 android:background="@color/tablet_white_pane_bg"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp" >
+                android:paddingLeft="@dimen/tablet_detail_padding"
+                android:paddingRight="@dimen/tablet_detail_padding" >
 
                 <include
                     layout="@layout/include_amenities"
@@ -226,8 +225,8 @@
                 android:layout_height="wrap_content"
                 android:background="@color/tablet_white_pane_bg"
                 android:orientation="vertical"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp" >
+                android:paddingLeft="@dimen/tablet_detail_padding"
+                android:paddingRight="@dimen/tablet_detail_padding" >
 
                 <TextView
                     android:layout_width="match_parent"
@@ -259,8 +258,8 @@
                 android:layout_height="wrap_content"
                 android:background="@color/tablet_white_pane_bg"
                 android:orientation="vertical"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp" />
+                android:paddingLeft="@dimen/tablet_detail_padding"
+                android:paddingRight="@dimen/tablet_detail_padding" />
         </LinearLayout>
     </ScrollView>
 
