--- a/project/res/values/tablet_themes.xml
+++ b/project/res/values/tablet_themes.xml
@@ -124,6 +124,8 @@
         <item name="android:layout_weight">1</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:drawablePadding">8dp</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">#4c4c4c</item>
         <item name="textStyle">light</item>
     </style>
 
