Better center the flight statistics children
Wrap the TextView's and their drawableLefts in a FrameLayout so the TextView
and its drawable can be centered horizontally evenly. If somebody has a better
way to do this, let me know please!

--- a/project/res/layout/fragment_tablet_flight_details.xml
+++ b/project/res/layout/fragment_tablet_flight_details.xml
@@ -58,7 +58,7 @@
                 android:background="@drawable/bg_flight_details_tablet_white_bottom"
                 android:padding="12dp" >
 
-            <!-- flight information -->
+            <!-- Flight information -->
 
             <LinearLayout
                     android:id="@+id/flight_legs_container"
@@ -71,32 +71,55 @@
                 <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="center"
                         android:orientation="horizontal"
-                        android:padding="32dp" >
+                        android:weightSum="3" >
 
-                    <com.expedia.bookings.widget.TextView
-                            style="@style/V2.Widget.TextView.FlightStatistic"
-                            android:drawableLeft="@drawable/ic_tablet_flight_time"
-                            android:text="71% on time" />
+                    <FrameLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1" >
 
-                    <com.expedia.bookings.widget.TextView
-                            android:id="@+id/flight_miles_text_view"
-                            style="@style/V2.Widget.TextView.FlightStatistic"
-                            android:drawableLeft="@drawable/ic_tablet_miles" />
+                        <com.expedia.bookings.widget.TextView
+                                style="@style/V2.Widget.TextView.FlightStatistic"
+                                android:drawableLeft="@drawable/ic_tablet_flight_time"
+                                android:text="71% on time" />
+                    </FrameLayout>
 
-                    <com.expedia.bookings.widget.TextView
-                            android:id="@+id/flight_overall_duration_text_view"
-                            style="@style/V2.Widget.TextView.FlightStatistic"
-                            android:drawableLeft="@drawable/ic_tablet_flight_time"
-                            android:text="10 hours" />
+                    <FrameLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1" >
+
+                        <com.expedia.bookings.widget.TextView
+                                android:id="@+id/flight_miles_text_view"
+                                style="@style/V2.Widget.TextView.FlightStatistic"
+                                android:drawableLeft="@drawable/ic_tablet_miles" />
+                    </FrameLayout>
+
+                    <FrameLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1" >
+
+                        <com.expedia.bookings.widget.TextView
+                                android:id="@+id/flight_overall_duration_text_view"
+                                style="@style/V2.Widget.TextView.FlightStatistic"
+                                android:drawableLeft="@drawable/ic_tablet_flight_time"
+                                android:text="10 hours" />
+                    </FrameLayout>
                 </LinearLayout>
+
+                <!-- Divider -->
 
                 <View
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/one_px_hdpi_two_px_xhdpi"
                         android:layout_marginBottom="18dp"
+                        android:layout_marginTop="18dp"
                         android:background="#e5e5e5" />
+
+                <!-- The Flight leg segments get added to the hierarchy at runtime -->
+
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
