--- a/project/res/layout/section_flight_leg_segment_tablet_details.xml
+++ b/project/res/layout/section_flight_leg_segment_tablet_details.xml
@@ -7,7 +7,7 @@
                                                       android:paddingTop="1dp" >
 
     <com.expedia.bookings.widget.TextView
-            android:id="@+id/airline_text_view"
+            android:id="@+id/airline_and_cities_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
@@ -17,17 +17,8 @@
             android:layout_marginTop="6dp"
             android:ellipsize="middle"
             android:singleLine="true"
-            android:textSize="16sp"
-            app:textStyle="bold" />
-
-    <com.expedia.bookings.widget.TextView
-            android:id="@+id/cities_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/airline_text_view"
-            android:layout_alignBottom="@id/airline_text_view"
-            android:textSize="16sp"
-            app:textStyle="medium"/>
+            android:textColor="@color/tablet_flight_details_primary_text_color"
+            android:textSize="18sp" />
 
     <!--
     Don't merge this into a drawableLeft of operating_carrier_text_view,
@@ -38,8 +29,8 @@
             android:id="@+id/operating_carrier_image_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/airline_text_view"
-            android:layout_below="@+id/airline_text_view"
+            android:layout_alignLeft="@id/airline_and_cities_text_view"
+            android:layout_below="@id/airline_and_cities_text_view"
             android:layout_marginLeft="6dp"
             android:src="@drawable/ic_operating_carrier"
             android:visibility="gone" />
@@ -53,8 +44,10 @@
             android:layout_marginRight="8dp"
             android:layout_marginTop="1dp"
             android:layout_toRightOf="@+id/operating_carrier_image_view"
+            android:textColor="@color/tablet_flight_details_primary_text_color"
             android:textSize="12sp"
-            android:visibility="gone" />
+            android:visibility="gone"
+            app:textStyle="light" />
 
     <com.expedia.bookings.widget.TextView
             android:id="@+id/departure_time_text_view"
@@ -62,9 +55,10 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/operating_carrier_text_view"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="6dp"
+            android:layout_marginTop="20dp"
             android:paddingBottom="16dp"
-            android:textSize="15sp"
+            android:textColor="@color/tablet_flight_details_primary_text_color"
+            android:textSize="@dimen/tablet_flight_details_flight_trip_view_text_size"
             app:textStyle="light" />
 
     <com.expedia.bookings.widget.TextView
@@ -74,8 +68,9 @@
             android:layout_alignParentRight="true"
             android:layout_below="@+id/operating_carrier_text_view"
             android:layout_marginRight="10dp"
-            android:layout_marginTop="6dp"
-            android:textSize="15sp"
+            android:layout_marginTop="20dp"
+            android:textColor="@color/tablet_flight_details_primary_text_color"
+            android:textSize="@dimen/tablet_flight_details_flight_trip_view_text_size"
             app:textStyle="light" />
 
     <com.expedia.bookings.widget.TextView
@@ -86,23 +81,25 @@
             android:layout_below="@+id/arrival_time_text_view"
             android:layout_marginRight="10dp"
             android:layout_marginTop="@dimen/flight_leg_day_textview_margin_top"
-            android:textColor="@color/itin_flight_line_color"
+            android:textColor="@color/tablet_flight_details_primary_text_color"
             android:textSize="12sp"
-            android:textStyle="bold"
-            android:visibility="invisible" />
+            android:visibility="invisible"
+            app:textStyle="bold" />
 
     <com.expedia.bookings.widget.FlightTripView
             android:id="@+id/flight_trip_view"
             android:layout_width="wrap_content"
-            android:layout_height="28dp"
+            android:layout_height="48dp"
+            android:layout_alignTop="@id/departure_time_text_view"
             android:layout_below="@+id/operating_carrier_text_view"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="1dp"
             android:layout_toLeftOf="@+id/arrival_time_text_view"
             android:layout_toRightOf="@+id/departure_time_text_view"
-            app:flightLineColor="@color/itin_flight_line_color"
-            app:waypointTextColor="@android:color/black"
-            app:waypointTextTopMargin="4dp" />
+            app:flightLineColor="#287cb9"
+            app:waypointTextColor="#777777"
+            app:waypointTextSize="14sp"
+            app:waypointTextTypeface="medium" />
 
 </com.expedia.bookings.section.FlightLegSummarySection>
