--- a/project/res/layout/section_flight_segment.xml
+++ b/project/res/layout/section_flight_segment.xml
@@ -18,7 +18,7 @@
         android:layout_marginTop="6dp"
         android:background="#A8A8A8" />
 
-    <TextView
+    <com.expedia.bookings.widget.TextView
         android:id="@+id/details_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
