--- a/project/res/layout/section_flight_segment_tablet.xml
+++ b/project/res/layout/section_flight_segment_tablet.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.expedia.bookings.section.FlightSegmentSection xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@android:color/white"
-    android:orientation="vertical" >
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                   android:layout_width="match_parent"
+                                                   android:layout_height="wrap_content"
+                                                   android:background="@android:color/white"
+                                                   android:orientation="vertical" >
 
     <include
-        android:id="@+id/flight_leg_summary"
-        layout="@layout/section_flight_leg_segment_tablet_details" />
+            android:id="@+id/flight_leg_summary"
+            layout="@layout/section_flight_leg_segment_tablet_details" />
 
-    <TextView
-        android:id="@+id/details_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp"
-        android:textColor="#5D656E"
-        android:textSize="14dp" />
+    <com.expedia.bookings.widget.TextView
+            android:id="@+id/details_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
+            android:textColor="@color/tablet_flight_details_primary_text_color"
+            android:textSize="@dimen/tablet_flight_details_flight_trip_view_text_size"
+            app:textStyle="light" />
 
 </com.expedia.bookings.section.FlightSegmentSection>
