--- a/project/res/values/colors.xml
+++ b/project/res/values/colors.xml
@@ -168,5 +168,6 @@
 
     <!-- Tablet flights -->
     <color name="tablet_flight_trip_view_airport_text_color">#aaffffff</color>
+    <color name="tablet_flight_details_primary_text_color">#4c4c4c</color>
 
 </resources>
