--- a/project/res/layout/snippet_flight_airport_filter.xml
+++ b/project/res/layout/snippet_flight_airport_filter.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="@android:color/white"
@@ -9,10 +10,20 @@
             android:id="@+id/airport_filter_container"
             style="@style/V2.Widget.LinearLayout.FlightFilter" />
 
-    <Button
+    <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/one_px_hdpi_two_px_xhdpi"
+            android:background="@color/divider_grey" />
+
+    <com.expedia.bookings.widget.TextView
             android:id="@+id/airport_filter_done"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/Done" />
+            android:gravity="center"
+            android:padding="8dp"
+            android:text="@string/Done"
+            android:textColor="@color/tablet_flight_filter_text_color"
+            android:textSize="16sp"
+            app:textStyle="normal" />
 
 </LinearLayout>
