--- a/project/res/values/tablet_themes.xml
+++ b/project/res/values/tablet_themes.xml
@@ -86,7 +86,8 @@
     <style name="V2.Widget.TextView.FilterTitle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginBottom">@dimen/tablet_filter_title_margin_bottom</item>
+        <item name="android:layout_marginTop">6dp</item>
+        <item name="android:layout_marginBottom">12dp</item>
         <item name="android:textSize">18sp</item>
         <item name="android:textColor">#4c5156</item>
         <item name="textStyle">normal</item>
