--- a/project/res/values/dimens.xml
+++ b/project/res/values/dimens.xml
@@ -15,6 +15,7 @@
 
     <!-- Flights -->
     <dimen name="tablet_filter_white_space">32dp</dimen>
+    <dimen name="tablet_flight_details_horizontal_padding">24dp</dimen>
     <dimen name="tablet_flight_details_flight_trip_view_text_size">17sp</dimen>
 
     <!-- Tablet details -->
