--- a/project/res/layout/fragment_tablet_hotel_details.xml
+++ b/project/res/layout/fragment_tablet_hotel_details.xml
@@ -48,8 +48,9 @@
                         android:layout_height="48dp"
                         android:layout_alignParentRight="true"
                         android:layout_gravity="center_vertical"
+                        android:textAllCaps="true"
                         android:textSize="14sp"
-                        android:textAllCaps="true" />
+                        android:textStyle="bold" />
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -59,29 +60,31 @@
                         android:layout_toLeftOf="@id/button_add_to_trip"
                         android:orientation="vertical" >
 
-                        <TextView
+                        <com.expedia.bookings.widget.TextView
                             android:id="@+id/hotel_header_hotel_name"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:ellipsize="end"
                             android:includeFontPadding="false"
                             android:singleLine="true"
-                            android:ellipsize="end"
                             android:textColor="#ffffff"
-                            android:textSize="24sp" />
+                            android:textSize="20sp"
+                            app:textStyle="light" />
 
                         <LinearLayout
                             android:id="@+id/rating_container"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" >
 
-                            <TextView
+                            <com.expedia.bookings.widget.TextView
                                 android:id="@+id/not_rated_text_view"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:includeFontPadding="false"
                                 android:text="@string/not_rated"
-                                android:textColor="@color/hotel_cell_secondary_color"
-                                android:visibility="gone" />
+                                android:textColor="#d3d7dc"
+                                android:visibility="gone"
+                                app:textStyle="light" />
 
                             <RatingBar
                                 android:id="@+id/star_rating_bar"
@@ -93,14 +96,15 @@
                                 android:numStars="5"
                                 android:stepSize=".5" />
 
-                            <TextView
+                            <com.expedia.bookings.widget.TextView
                                 android:id="@+id/star_rating_text"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:includeFontPadding="false"
                                 android:paddingLeft="4dp"
                                 android:paddingRight="8dp"
-                                android:textColor="@color/hotel_cell_secondary_color" />
+                                android:textColor="#d3d7dc"
+                                app:textStyle="light" />
 
                             <RatingBar
                                 android:id="@+id/user_rating_bar"
@@ -112,14 +116,15 @@
                                 android:numStars="5"
                                 android:stepSize=".5" />
 
-                            <TextView
+                            <com.expedia.bookings.widget.TextView
                                 android:id="@+id/user_rating_text"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:includeFontPadding="false"
                                 android:paddingLeft="4dp"
                                 android:paddingRight="8dp"
-                                android:textColor="@color/hotel_cell_secondary_color" />
+                                android:textColor="#d3d7dc"
+                                app:textStyle="light" />
                         </LinearLayout>
                     </LinearLayout>
                 </RelativeLayout>
@@ -127,18 +132,17 @@
 
             <!-- Reviews section (#2059) -->
 
-            <LinearLayout
+            <FrameLayout
                 android:id="@+id/reviews_container"
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
-                android:paddingLeft="@dimen/tablet_detail_padding"
-                android:background="@color/tablet_white_pane_bg" >
+                android:background="@color/tablet_white_pane_bg"
+                android:paddingLeft="@dimen/tablet_detail_padding" >
 
                 <LinearLayout
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="48dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="1"
+                    android:layout_gravity="center_vertical|left"
                     android:gravity="center_vertical|left" >
 
                     <com.expedia.bookings.widget.RingedCountView
@@ -146,26 +150,26 @@
                         android:layout_width="48dp"
                         android:layout_height="48dp"
                         app:countTextColor="@color/details_ring_red"
-                        app:countTextSize="18sp"
+                        app:countTextSize="16sp"
                         app:percent="0"
                         app:primaryColor="@color/details_ring_red"
                         app:ringThickness="4dp"
                         app:secondaryColor="@color/details_ring_gray" />
-                    <TextView
+
+                    <com.expedia.bookings.widget.TextView
                         android:id="@+id/rooms_left_ring_text"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:gravity="center_vertical"
                         android:padding="8dp"
-                        android:textColor="@color/details_ring_text"
-                        android:textSize="18sp" />
+                        android:textSize="16sp"
+                        app:textStyle="light" />
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="48dp"
                     android:layout_gravity="center"
-                    android:layout_weight="1"
                     android:gravity="center" >
 
                     <com.expedia.bookings.widget.RingedCountView
@@ -173,13 +177,13 @@
                         android:layout_width="48dp"
                         android:layout_height="48dp"
                         app:countTextColor="@color/details_ring_text"
-                        app:countTextSize="18sp"
+                        app:countTextSize="16sp"
                         app:percent="0"
                         app:primaryColor="@color/details_ring_blue"
                         app:ringThickness="4dp"
                         app:secondaryColor="@color/details_ring_gray" />
 
-                    <TextView
+                    <com.expedia.bookings.widget.TextView
                         android:id="@+id/user_rating_ring_text"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
@@ -187,19 +191,25 @@
                         android:padding="8dp"
                         android:text="@string/out_of_5"
                         android:textColor="@color/details_ring_text"
-                        android:textSize="18sp" />
+                        android:textSize="16sp"
+                        app:textStyle="light" />
                 </LinearLayout>
 
                 <TextView
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_gravity="center_vertical|right"
+                    android:layout_marginRight="4dp"
+                    android:drawablePadding="4dp"
+                    android:drawableLeft="@drawable/ic_read_reviews"
                     android:gravity="center_vertical|right"
-                    android:padding="8dp"
+                    android:padding="16dp"
                     android:text="@string/Read_Reviews"
-                    android:textColor="@color/details_ring_text"
-                    android:textSize="18sp" />
-            </LinearLayout>
+                    android:textAllCaps="true"
+                    android:textColor="#db4d6680"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
+            </FrameLayout>
 
             <!-- Amenities section (#2060) -->
 
@@ -225,29 +235,7 @@
                 android:background="@color/tablet_white_pane_bg"
                 android:orientation="vertical"
                 android:paddingLeft="@dimen/tablet_detail_padding"
-                android:paddingRight="@dimen/tablet_detail_padding" >
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="64dp"
-                    android:background="#FFFF00"
-                    android:gravity="center"
-                    android:text="Rate #1" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="64dp"
-                    android:background="#FF00FF"
-                    android:gravity="center"
-                    android:text="Rate #2" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="64dp"
-                    android:background="#00FFFF"
-                    android:gravity="center"
-                    android:text="Rate #3" />
-            </LinearLayout>
+                android:paddingRight="@dimen/tablet_detail_padding" />
 
             <!-- Hotel Description section -->
 
