--- a/project/res/layout/fragment_tablet_tripbucket_your_trip_to.xml
+++ b/project/res/layout/fragment_tablet_tripbucket_your_trip_to.xml
@@ -3,57 +3,89 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_layout"
     android:layout_width="wrap_content"
-    android:layout_height="match_parent"
-    android:gravity="center"
+    android:layout_height="wrap_content"
+    android:background="#D80d2a40"
+    android:gravity="center_horizontal"
     android:orientation="vertical" >
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:id="@+id/trip_to_layout"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="55dp"
         android:gravity="center"
-        android:orientation="horizontal"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp" >
+        android:orientation="horizontal" >
 
         <View
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:layout_weight="1"
-            android:background="#FFFFFF" />
+            android:id="@+id/left_divider"
+            android:layout_width="38dp"
+            android:layout_height="0.5dp"
+            android:layout_marginRight="14dp"
+            android:background="#5C6F7F" />
 
         <TextView
             android:id="@+id/top_header_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_weight="0"
+            android:layout_margin="0dp"
+            android:layout_marginLeft="14dp"
+            android:layout_marginRight="14dp"
             android:gravity="center"
             android:text="@string/trip_to"
-            android:textColor="#86959F"
-            android:textSize="14dp" />
+            android:textAllCaps="true"
+            android:textColor="@android:color/white"
+            android:textSize="18sp" />
 
         <View
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:layout_weight="1"
-            android:background="#FFFFFF" />
+            android:id="@+id/right_divider"
+            android:layout_width="38dp"
+            android:layout_height="0.5dp"
+            android:layout_marginLeft="14dp"
+            android:background="#5C6F7F" />
     </LinearLayout>
 
-    <TextView
+    <com.mobiata.android.widget.AutoResizeTextView
         android:id="@+id/primary_destination_text"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:layout_marginTop="-10dp"
+        android:textAllCaps="true"
         android:textColor="@android:color/white"
-        android:textSize="32dp" />
+        android:textSize="60sp"
+        android:textStyle="bold" />
+
+    <com.mobiata.android.widget.AutoResizeTextView
+        android:id="@+id/secondary_destination_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="-20dp"
+        android:textAllCaps="true"
+        android:textColor="#9BA1A6"
+        android:textSize="42sp"
+        android:textStyle="bold" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginLeft="14dp"
+        android:layout_marginRight="14dp"
+        android:layout_marginTop="110dp"
+        android:background="#5C6F7F" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="166dp"
+        android:src="@drawable/ic_trip_empty_suitcase" />
 
     <TextView
-        android:id="@+id/secondary_destination_text"
-        android:layout_width="match_parent"
+        android:id="@+id/trip_empty_text"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
         android:gravity="center"
-        android:textColor="#86959F"
-        android:textSize="24dp" />
+        android:text="@string/trip_empty"
+        android:textColor="#8695A0"
+        android:textSize="17sp" />
 
 </LinearLayout>
