--- a/project/res/values-large/colors.xml
+++ b/project/res/values-large/colors.xml
@@ -3,5 +3,6 @@
 
     <color name="user_review_separator">@android:color/transparent</color>
     <color name="bg_expedia_list">#f5f5f5</color>
+    <color name="amenity_text_color_large">#79848f</color>
 
 </resources>
