--- a/project/res/layout/fragment_tablet_hotel_details.xml
+++ b/project/res/layout/fragment_tablet_hotel_details.xml
@@ -151,6 +151,7 @@
                         android:layout_height="48dp"
                         app:countTextColor="@color/details_ring_red"
                         app:countTextSize="16sp"
+                        app:countTextStyle="bold"
                         app:percent="0"
                         app:primaryColor="@color/details_ring_red"
                         app:ringThickness="4dp"
@@ -178,6 +179,7 @@
                         android:layout_height="48dp"
                         app:countTextColor="@color/details_ring_text"
                         app:countTextSize="16sp"
+                        app:countTextStyle="bold"
                         app:percent="0"
                         app:primaryColor="@color/details_ring_blue"
                         app:ringThickness="4dp"
@@ -200,8 +202,8 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center_vertical|right"
                     android:layout_marginRight="4dp"
-                    android:drawablePadding="4dp"
                     android:drawableLeft="@drawable/ic_read_reviews"
+                    android:drawablePadding="4dp"
                     android:gravity="center_vertical|right"
                     android:padding="16dp"
                     android:text="@string/Read_Reviews"
